reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Beschreibt die für .NET Framework-Klassen verfügbaren Type Accelerators.
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: de-DE
ms.lasthandoff: 10/13/2020
ms.locfileid: "93222463"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="00330-104">Informationen zu typaccelerators</span><span class="sxs-lookup"><span data-stu-id="00330-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="00330-105">kurze Beschreibung</span><span class="sxs-lookup"><span data-stu-id="00330-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="00330-106">Beschreibt die für .NET Framework-Klassen verfügbaren Type Accelerators.</span><span class="sxs-lookup"><span data-stu-id="00330-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="00330-107">LANGE BESCHREIBUNG</span><span class="sxs-lookup"><span data-stu-id="00330-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="00330-108">Type Accelerators sind Aliase für .NET Framework-Klassen.</span><span class="sxs-lookup"><span data-stu-id="00330-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="00330-109">Sie ermöglichen den Zugriff auf bestimmte .NET Framework-Klassen, ohne explizit den gesamten Klassennamen eingeben zu müssen.</span><span class="sxs-lookup"><span data-stu-id="00330-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="00330-110">Beispielsweise können Sie die **Aliasattribute** -Klasse von `[System.Management.Automation.AliasAttribute]` auf verkürzen `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="00330-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="00330-111">Alle typacceleratoren müssen immer noch in eckige Klammern () eingeschlossen werden `[]` .</span><span class="sxs-lookup"><span data-stu-id="00330-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="00330-112">Verfügbare typacceleratoren</span><span class="sxs-lookup"><span data-stu-id="00330-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="00330-113">Accelerator</span><span class="sxs-lookup"><span data-stu-id="00330-113">Accelerator</span></span>          |                           <span data-ttu-id="00330-114">FullClassName</span><span class="sxs-lookup"><span data-stu-id="00330-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="00330-115">ADSI</span><span class="sxs-lookup"><span data-stu-id="00330-115">adsi</span></span>                         | <span data-ttu-id="00330-116">System. Director yservices. Director yentry</span><span class="sxs-lookup"><span data-stu-id="00330-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="00330-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="00330-117">adsisearcher</span></span>                 | <span data-ttu-id="00330-118">System. Director yservices. Director ysearcher</span><span class="sxs-lookup"><span data-stu-id="00330-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="00330-119">Alias</span><span class="sxs-lookup"><span data-stu-id="00330-119">Alias</span></span>                        | <span data-ttu-id="00330-120">System. Management. Automation. Aliasattribute</span><span class="sxs-lookup"><span data-stu-id="00330-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="00330-121">"Zuordnung"</span><span class="sxs-lookup"><span data-stu-id="00330-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="00330-122">System. Management. Automation. zuwemptycollectionattribute</span><span class="sxs-lookup"><span data-stu-id="00330-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="00330-123">"Zuordnung"</span><span class="sxs-lookup"><span data-stu-id="00330-123">AllowEmptyString</span></span>             | <span data-ttu-id="00330-124">System. Management. Automation. zuwemptystringattribute</span><span class="sxs-lookup"><span data-stu-id="00330-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="00330-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="00330-125">AllowNull</span></span>                    | <span data-ttu-id="00330-126">System. Management. Automation. allownullattribute</span><span class="sxs-lookup"><span data-stu-id="00330-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="00330-127">Argumentcompleter</span><span class="sxs-lookup"><span data-stu-id="00330-127">ArgumentCompleter</span></span>            | <span data-ttu-id="00330-128">System. Management. Automation. argumentcompleterattribute</span><span class="sxs-lookup"><span data-stu-id="00330-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="00330-129">array</span><span class="sxs-lookup"><span data-stu-id="00330-129">array</span></span>                        | <span data-ttu-id="00330-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="00330-130">System.Array</span></span>                                                        |
|<span data-ttu-id="00330-131">BIGINT</span><span class="sxs-lookup"><span data-stu-id="00330-131">bigint</span></span>                       | <span data-ttu-id="00330-132">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="00330-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="00330-133">bool</span><span class="sxs-lookup"><span data-stu-id="00330-133">bool</span></span>                         | <span data-ttu-id="00330-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="00330-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="00330-135">byte</span><span class="sxs-lookup"><span data-stu-id="00330-135">byte</span></span>                         | <span data-ttu-id="00330-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="00330-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="00330-137">char</span><span class="sxs-lookup"><span data-stu-id="00330-137">char</span></span>                         | <span data-ttu-id="00330-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="00330-138">System.Char</span></span>                                                         |
|<span data-ttu-id="00330-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="00330-139">cimclass</span></span>                     | <span data-ttu-id="00330-140">Microsoft. Management. Infrastructure. cimclass</span><span class="sxs-lookup"><span data-stu-id="00330-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="00330-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="00330-141">cimconverter</span></span>                 | <span data-ttu-id="00330-142">Microsoft. Management. Infrastructure. cimconverter</span><span class="sxs-lookup"><span data-stu-id="00330-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="00330-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="00330-143">ciminstance</span></span>                  | <span data-ttu-id="00330-144">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="00330-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="00330-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="00330-145">CimSession</span></span>                   | <span data-ttu-id="00330-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="00330-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="00330-147">CimType</span><span class="sxs-lookup"><span data-stu-id="00330-147">cimtype</span></span>                      | <span data-ttu-id="00330-148">Microsoft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="00330-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="00330-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="00330-149">CmdletBinding</span></span>                | <span data-ttu-id="00330-150">System. Management. Automation. cmdletbindingattribute</span><span class="sxs-lookup"><span data-stu-id="00330-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="00330-151">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="00330-151">cultureinfo</span></span>                  | <span data-ttu-id="00330-152">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="00330-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="00330-153">datetime</span><span class="sxs-lookup"><span data-stu-id="00330-153">datetime</span></span>                     | <span data-ttu-id="00330-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="00330-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="00330-155">decimal</span><span class="sxs-lookup"><span data-stu-id="00330-155">decimal</span></span>                      | <span data-ttu-id="00330-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="00330-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="00330-157">double</span><span class="sxs-lookup"><span data-stu-id="00330-157">double</span></span>                       | <span data-ttu-id="00330-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="00330-158">System.Double</span></span>                                                       |
|<span data-ttu-id="00330-159">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="00330-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="00330-160">System. Management. Automation. dsclocalconfigurationmanagerattribute</span><span class="sxs-lookup"><span data-stu-id="00330-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="00330-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="00330-161">DscProperty</span></span>                  | <span data-ttu-id="00330-162">System. Management. Automation. dscpropertyattribute</span><span class="sxs-lookup"><span data-stu-id="00330-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="00330-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="00330-163">DscResource</span></span>                  | <span data-ttu-id="00330-164">System. Management. Automation. dscresourceattribute</span><span class="sxs-lookup"><span data-stu-id="00330-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="00330-165">float</span><span class="sxs-lookup"><span data-stu-id="00330-165">float</span></span>                        | <span data-ttu-id="00330-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="00330-166">System.Single</span></span>                                                       |
|<span data-ttu-id="00330-167">guid</span><span class="sxs-lookup"><span data-stu-id="00330-167">guid</span></span>                         | <span data-ttu-id="00330-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="00330-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="00330-169">Hash Tabelle</span><span class="sxs-lookup"><span data-stu-id="00330-169">hashtable</span></span>                    | <span data-ttu-id="00330-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="00330-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="00330-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="00330-171">initialsessionstate</span></span>          | <span data-ttu-id="00330-172">System.Management.Automation.Runspaces.Initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="00330-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="00330-173">INT</span><span class="sxs-lookup"><span data-stu-id="00330-173">int</span></span>                          | <span data-ttu-id="00330-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="00330-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="00330-175">int16</span><span class="sxs-lookup"><span data-stu-id="00330-175">int16</span></span>                        | <span data-ttu-id="00330-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="00330-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="00330-177">int32</span><span class="sxs-lookup"><span data-stu-id="00330-177">int32</span></span>                        | <span data-ttu-id="00330-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="00330-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="00330-179">int64</span><span class="sxs-lookup"><span data-stu-id="00330-179">int64</span></span>                        | <span data-ttu-id="00330-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="00330-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="00330-181">IPAddress</span><span class="sxs-lookup"><span data-stu-id="00330-181">ipaddress</span></span>                    | <span data-ttu-id="00330-182">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="00330-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="00330-183">IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="00330-183">IPEndpoint</span></span>                   | <span data-ttu-id="00330-184">System .net. ipdpoint</span><span class="sxs-lookup"><span data-stu-id="00330-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="00330-185">long</span><span class="sxs-lookup"><span data-stu-id="00330-185">long</span></span>                         | <span data-ttu-id="00330-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="00330-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="00330-187">MailAddress</span><span class="sxs-lookup"><span data-stu-id="00330-187">mailaddress</span></span>                  | <span data-ttu-id="00330-188">System .net. Mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="00330-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="00330-189">NULL-Zeichenfolge</span><span class="sxs-lookup"><span data-stu-id="00330-189">NullString</span></span>                   | <span data-ttu-id="00330-190">System. Management. Automation. Language. NullString</span><span class="sxs-lookup"><span data-stu-id="00330-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="00330-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="00330-191">ObjectSecurity</span></span>               | <span data-ttu-id="00330-192">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="00330-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="00330-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="00330-193">OutputType</span></span>                   | <span data-ttu-id="00330-194">System. Management. Automation. outputtypeer Attribute</span><span class="sxs-lookup"><span data-stu-id="00330-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="00330-195">Parameter</span><span class="sxs-lookup"><span data-stu-id="00330-195">Parameter</span></span>                    | <span data-ttu-id="00330-196">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="00330-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="00330-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="00330-197">PhysicalAddress</span></span>              | <span data-ttu-id="00330-198">System .net. Network Information. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="00330-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="00330-199">powershell</span><span class="sxs-lookup"><span data-stu-id="00330-199">powershell</span></span>                   | <span data-ttu-id="00330-200">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="00330-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="00330-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="00330-201">psaliasproperty</span></span>              | <span data-ttu-id="00330-202">System. Management. Automation. psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="00330-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="00330-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="00330-203">pscredential</span></span>                 | <span data-ttu-id="00330-204">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="00330-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="00330-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="00330-205">pscustomobject</span></span>               | <span data-ttu-id="00330-206">System. Management. Automation. psobject</span><span class="sxs-lookup"><span data-stu-id="00330-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="00330-207">Psdefaultvalue</span><span class="sxs-lookup"><span data-stu-id="00330-207">PSDefaultValue</span></span>               | <span data-ttu-id="00330-208">System.Management.Automation.PSDefaultvalueattribute</span><span class="sxs-lookup"><span data-stu-id="00330-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="00330-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="00330-209">pslistmodifier</span></span>               | <span data-ttu-id="00330-210">System. Management. Automation. pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="00330-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="00330-211">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="00330-211">psmoduleinfo</span></span>                 | <span data-ttu-id="00330-212">System. Management. Automation. psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="00330-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="00330-213">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="00330-213">psnoteproperty</span></span>               | <span data-ttu-id="00330-214">System. Management. Automation. psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="00330-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="00330-215">psobject</span><span class="sxs-lookup"><span data-stu-id="00330-215">psobject</span></span>                     | <span data-ttu-id="00330-216">System. Management. Automation. psobject</span><span class="sxs-lookup"><span data-stu-id="00330-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="00330-217">psprientschärvedictionary</span><span class="sxs-lookup"><span data-stu-id="00330-217">psprimitivedictionary</span></span>        | <span data-ttu-id="00330-218">System. Management. Automation. psprientschärvedictionary</span><span class="sxs-lookup"><span data-stu-id="00330-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="00330-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="00330-219">psscriptmethod</span></span>               | <span data-ttu-id="00330-220">System. Management. Automation. psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="00330-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="00330-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="00330-221">psscriptproperty</span></span>             | <span data-ttu-id="00330-222">System. Management. Automation. psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="00330-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="00330-223">Pstypameattribute</span><span class="sxs-lookup"><span data-stu-id="00330-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="00330-224">System. Management. Automation. pstypameattribute</span><span class="sxs-lookup"><span data-stu-id="00330-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="00330-225">psvariable</span><span class="sxs-lookup"><span data-stu-id="00330-225">psvariable</span></span>                   | <span data-ttu-id="00330-226">System. Management. Automation. psvariable</span><span class="sxs-lookup"><span data-stu-id="00330-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="00330-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="00330-227">psvariableproperty</span></span>           | <span data-ttu-id="00330-228">System. Management. Automation. psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="00330-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="00330-229">ref</span><span class="sxs-lookup"><span data-stu-id="00330-229">ref</span></span>                          | <span data-ttu-id="00330-230">System. Management. Automation. psreference</span><span class="sxs-lookup"><span data-stu-id="00330-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="00330-231">regex</span><span class="sxs-lookup"><span data-stu-id="00330-231">regex</span></span>                        | <span data-ttu-id="00330-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="00330-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="00330-233">Runspace</span><span class="sxs-lookup"><span data-stu-id="00330-233">runspace</span></span>                     | <span data-ttu-id="00330-234">System. Management. Automation. Runspaces. Runspace</span><span class="sxs-lookup"><span data-stu-id="00330-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="00330-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="00330-235">runspacefactory</span></span>              | <span data-ttu-id="00330-236">System. Management. Automation. Runspaces. runspacefactory</span><span class="sxs-lookup"><span data-stu-id="00330-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="00330-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="00330-237">sbyte</span></span>                        | <span data-ttu-id="00330-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="00330-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="00330-239">scriptblock</span><span class="sxs-lookup"><span data-stu-id="00330-239">scriptblock</span></span>                  | <span data-ttu-id="00330-240">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="00330-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="00330-241">securestring</span><span class="sxs-lookup"><span data-stu-id="00330-241">securestring</span></span>                 | <span data-ttu-id="00330-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="00330-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="00330-243">single</span><span class="sxs-lookup"><span data-stu-id="00330-243">single</span></span>                       | <span data-ttu-id="00330-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="00330-244">System.Single</span></span>                                                       |
|<span data-ttu-id="00330-245">string</span><span class="sxs-lookup"><span data-stu-id="00330-245">string</span></span>                       | <span data-ttu-id="00330-246">System.String</span><span class="sxs-lookup"><span data-stu-id="00330-246">System.String</span></span>                                                       |
|<span data-ttu-id="00330-247">Supportswildcards</span><span class="sxs-lookup"><span data-stu-id="00330-247">SupportsWildcards</span></span>            | <span data-ttu-id="00330-248">System. Management. Automation. supportswildcardsattribute</span><span class="sxs-lookup"><span data-stu-id="00330-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="00330-249">switch</span><span class="sxs-lookup"><span data-stu-id="00330-249">switch</span></span>                       | <span data-ttu-id="00330-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="00330-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="00330-251">Zeitraum</span><span class="sxs-lookup"><span data-stu-id="00330-251">timespan</span></span>                     | <span data-ttu-id="00330-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="00330-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="00330-253">type</span><span class="sxs-lookup"><span data-stu-id="00330-253">type</span></span>                         | <span data-ttu-id="00330-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="00330-254">System.Type</span></span>                                                         |
|<span data-ttu-id="00330-255">uint16</span><span class="sxs-lookup"><span data-stu-id="00330-255">uint16</span></span>                       | <span data-ttu-id="00330-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="00330-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="00330-257">uint32</span><span class="sxs-lookup"><span data-stu-id="00330-257">uint32</span></span>                       | <span data-ttu-id="00330-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="00330-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="00330-259">uint64</span><span class="sxs-lookup"><span data-stu-id="00330-259">uint64</span></span>                       | <span data-ttu-id="00330-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="00330-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="00330-261">uri</span><span class="sxs-lookup"><span data-stu-id="00330-261">uri</span></span>                          | <span data-ttu-id="00330-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="00330-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="00330-263">Validatecount</span><span class="sxs-lookup"><span data-stu-id="00330-263">ValidateCount</span></span>                | <span data-ttu-id="00330-264">System. Management. Automation. validatezähltattribute</span><span class="sxs-lookup"><span data-stu-id="00330-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="00330-265">Validatedrive</span><span class="sxs-lookup"><span data-stu-id="00330-265">ValidateDrive</span></span>                | <span data-ttu-id="00330-266">System. Management. Automation. validatedriveattribute</span><span class="sxs-lookup"><span data-stu-id="00330-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="00330-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="00330-267">ValidateLength</span></span>               | <span data-ttu-id="00330-268">System. Management. Automation. validatelengthattribute</span><span class="sxs-lookup"><span data-stu-id="00330-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="00330-269">Validatenotnull</span><span class="sxs-lookup"><span data-stu-id="00330-269">ValidateNotNull</span></span>              | <span data-ttu-id="00330-270">System. Management. Automation. validatenotnullattribute</span><span class="sxs-lookup"><span data-stu-id="00330-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="00330-271">Validatenotnullorempty</span><span class="sxs-lookup"><span data-stu-id="00330-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="00330-272">System. Management. Automation. validatenotnulloremptyattribute</span><span class="sxs-lookup"><span data-stu-id="00330-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="00330-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="00330-273">ValidatePattern</span></span>              | <span data-ttu-id="00330-274">System. Management. Automation. validatepatternattribute</span><span class="sxs-lookup"><span data-stu-id="00330-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="00330-275">Validaterange</span><span class="sxs-lookup"><span data-stu-id="00330-275">ValidateRange</span></span>                | <span data-ttu-id="00330-276">System. Management. Automation. validaterangeattribute</span><span class="sxs-lookup"><span data-stu-id="00330-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="00330-277">Validatescript</span><span class="sxs-lookup"><span data-stu-id="00330-277">ValidateScript</span></span>               | <span data-ttu-id="00330-278">System. Management. Automation. validatescriptattribute</span><span class="sxs-lookup"><span data-stu-id="00330-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="00330-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="00330-279">ValidateSet</span></span>                  | <span data-ttu-id="00330-280">System. Management. Automation. validatesetattribute</span><span class="sxs-lookup"><span data-stu-id="00330-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="00330-281">Validatetrusteddata</span><span class="sxs-lookup"><span data-stu-id="00330-281">ValidateTrustedData</span></span>          | <span data-ttu-id="00330-282">System. Management. Automation. validatetrusteddataattribute</span><span class="sxs-lookup"><span data-stu-id="00330-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="00330-283">Validateuserdrive</span><span class="sxs-lookup"><span data-stu-id="00330-283">ValidateUserDrive</span></span>            | <span data-ttu-id="00330-284">System. Management. Automation. validateuserdriveattribute</span><span class="sxs-lookup"><span data-stu-id="00330-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="00330-285">version</span><span class="sxs-lookup"><span data-stu-id="00330-285">version</span></span>                      | <span data-ttu-id="00330-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="00330-286">System.Version</span></span>                                                      |
|<span data-ttu-id="00330-287">void</span><span class="sxs-lookup"><span data-stu-id="00330-287">void</span></span>                         | <span data-ttu-id="00330-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="00330-288">System.Void</span></span>                                                         |
|<span data-ttu-id="00330-289">Wildcardpattern</span><span class="sxs-lookup"><span data-stu-id="00330-289">WildcardPattern</span></span>              | <span data-ttu-id="00330-290">System. Management. Automation. wildcardpattern</span><span class="sxs-lookup"><span data-stu-id="00330-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="00330-291">WMI</span><span class="sxs-lookup"><span data-stu-id="00330-291">wmi</span></span>                          | <span data-ttu-id="00330-292">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="00330-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="00330-293">WMIClass</span><span class="sxs-lookup"><span data-stu-id="00330-293">wmiclass</span></span>                     | <span data-ttu-id="00330-294">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="00330-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="00330-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="00330-295">wmisearcher</span></span>                  | <span data-ttu-id="00330-296">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="00330-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="00330-297">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="00330-297">X500DistinguishedName</span></span>        | <span data-ttu-id="00330-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="00330-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="00330-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="00330-299">X509Certificate</span></span>              | <span data-ttu-id="00330-300">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="00330-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="00330-301">Xml</span><span class="sxs-lookup"><span data-stu-id="00330-301">xml</span></span>                          | <span data-ttu-id="00330-302">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="00330-302">System.Xml.XmlDocument</span></span>                                              |
