reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Beschreibt die für .NET Framework-Klassen verfügbaren Type Accelerators.
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: de-DE
ms.lasthandoff: 10/13/2020
ms.locfileid: "93220964"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="641ad-104">Informationen zu typaccelerators</span><span class="sxs-lookup"><span data-stu-id="641ad-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="641ad-105">kurze Beschreibung</span><span class="sxs-lookup"><span data-stu-id="641ad-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="641ad-106">Beschreibt die für .NET Framework-Klassen verfügbaren Type Accelerators.</span><span class="sxs-lookup"><span data-stu-id="641ad-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="641ad-107">LANGE BESCHREIBUNG</span><span class="sxs-lookup"><span data-stu-id="641ad-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="641ad-108">Type Accelerators sind Aliase für .NET Framework-Klassen.</span><span class="sxs-lookup"><span data-stu-id="641ad-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="641ad-109">Sie ermöglichen den Zugriff auf bestimmte .NET Framework-Klassen, ohne explizit den gesamten Klassennamen eingeben zu müssen.</span><span class="sxs-lookup"><span data-stu-id="641ad-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="641ad-110">Beispielsweise können Sie die **Aliasattribute** -Klasse von `[System.Management.Automation.AliasAttribute]` auf verkürzen `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="641ad-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="641ad-111">Alle typacceleratoren müssen immer noch in eckige Klammern () eingeschlossen werden `[]` .</span><span class="sxs-lookup"><span data-stu-id="641ad-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="641ad-112">Verfügbare typacceleratoren</span><span class="sxs-lookup"><span data-stu-id="641ad-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="641ad-113">Accelerator</span><span class="sxs-lookup"><span data-stu-id="641ad-113">Accelerator</span></span>          |                           <span data-ttu-id="641ad-114">FullClassName</span><span class="sxs-lookup"><span data-stu-id="641ad-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="641ad-115">ADSI</span><span class="sxs-lookup"><span data-stu-id="641ad-115">adsi</span></span>                         | <span data-ttu-id="641ad-116">System. Director yservices. Director yentry</span><span class="sxs-lookup"><span data-stu-id="641ad-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="641ad-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="641ad-117">adsisearcher</span></span>                 | <span data-ttu-id="641ad-118">System. Director yservices. Director ysearcher</span><span class="sxs-lookup"><span data-stu-id="641ad-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="641ad-119">Alias</span><span class="sxs-lookup"><span data-stu-id="641ad-119">Alias</span></span>                        | <span data-ttu-id="641ad-120">System. Management. Automation. Aliasattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="641ad-121">"Zuordnung"</span><span class="sxs-lookup"><span data-stu-id="641ad-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="641ad-122">System. Management. Automation. zuwemptycollectionattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="641ad-123">"Zuordnung"</span><span class="sxs-lookup"><span data-stu-id="641ad-123">AllowEmptyString</span></span>             | <span data-ttu-id="641ad-124">System. Management. Automation. zuwemptystringattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="641ad-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="641ad-125">AllowNull</span></span>                    | <span data-ttu-id="641ad-126">System. Management. Automation. allownullattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="641ad-127">Argumentcompleter</span><span class="sxs-lookup"><span data-stu-id="641ad-127">ArgumentCompleter</span></span>            | <span data-ttu-id="641ad-128">System. Management. Automation. argumentcompleterattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="641ad-129">Argumentvervollständigungen</span><span class="sxs-lookup"><span data-stu-id="641ad-129">ArgumentCompletions</span></span>          | <span data-ttu-id="641ad-130">System. Management. Automation. argumentcompletionsattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="641ad-131">array</span><span class="sxs-lookup"><span data-stu-id="641ad-131">array</span></span>                        | <span data-ttu-id="641ad-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="641ad-132">System.Array</span></span>                                                        |
|<span data-ttu-id="641ad-133">BIGINT</span><span class="sxs-lookup"><span data-stu-id="641ad-133">bigint</span></span>                       | <span data-ttu-id="641ad-134">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="641ad-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="641ad-135">bool</span><span class="sxs-lookup"><span data-stu-id="641ad-135">bool</span></span>                         | <span data-ttu-id="641ad-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="641ad-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="641ad-137">byte</span><span class="sxs-lookup"><span data-stu-id="641ad-137">byte</span></span>                         | <span data-ttu-id="641ad-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="641ad-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="641ad-139">char</span><span class="sxs-lookup"><span data-stu-id="641ad-139">char</span></span>                         | <span data-ttu-id="641ad-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="641ad-140">System.Char</span></span>                                                         |
|<span data-ttu-id="641ad-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="641ad-141">cimclass</span></span>                     | <span data-ttu-id="641ad-142">Microsoft. Management. Infrastructure. cimclass</span><span class="sxs-lookup"><span data-stu-id="641ad-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="641ad-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="641ad-143">cimconverter</span></span>                 | <span data-ttu-id="641ad-144">Microsoft. Management. Infrastructure. cimconverter</span><span class="sxs-lookup"><span data-stu-id="641ad-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="641ad-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="641ad-145">ciminstance</span></span>                  | <span data-ttu-id="641ad-146">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="641ad-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="641ad-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="641ad-147">CimSession</span></span>                   | <span data-ttu-id="641ad-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="641ad-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="641ad-149">CimType</span><span class="sxs-lookup"><span data-stu-id="641ad-149">cimtype</span></span>                      | <span data-ttu-id="641ad-150">Microsoft. Management. Infrastructure. CimType</span><span class="sxs-lookup"><span data-stu-id="641ad-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="641ad-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="641ad-151">CmdletBinding</span></span>                | <span data-ttu-id="641ad-152">System. Management. Automation. cmdletbindingattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="641ad-153">CultureInfo</span><span class="sxs-lookup"><span data-stu-id="641ad-153">cultureinfo</span></span>                  | <span data-ttu-id="641ad-154">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="641ad-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="641ad-155">datetime</span><span class="sxs-lookup"><span data-stu-id="641ad-155">datetime</span></span>                     | <span data-ttu-id="641ad-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="641ad-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="641ad-157">decimal</span><span class="sxs-lookup"><span data-stu-id="641ad-157">decimal</span></span>                      | <span data-ttu-id="641ad-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="641ad-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="641ad-159">double</span><span class="sxs-lookup"><span data-stu-id="641ad-159">double</span></span>                       | <span data-ttu-id="641ad-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="641ad-160">System.Double</span></span>                                                       |
|<span data-ttu-id="641ad-161">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="641ad-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="641ad-162">System. Management. Automation. dsclocalconfigurationmanagerattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="641ad-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="641ad-163">DscProperty</span></span>                  | <span data-ttu-id="641ad-164">System. Management. Automation. dscpropertyattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="641ad-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="641ad-165">DscResource</span></span>                  | <span data-ttu-id="641ad-166">System. Management. Automation. dscresourceattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="641ad-167">Experiment Aktion</span><span class="sxs-lookup"><span data-stu-id="641ad-167">ExperimentAction</span></span>             | <span data-ttu-id="641ad-168">System. Management. Automation. Experiment Action</span><span class="sxs-lookup"><span data-stu-id="641ad-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="641ad-169">Experimentell</span><span class="sxs-lookup"><span data-stu-id="641ad-169">Experimental</span></span>                 | <span data-ttu-id="641ad-170">System. Management. Automation. ExperimentalAttribute</span><span class="sxs-lookup"><span data-stu-id="641ad-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="641ad-171">Experimentalfeature</span><span class="sxs-lookup"><span data-stu-id="641ad-171">ExperimentalFeature</span></span>          | <span data-ttu-id="641ad-172">System. Management. Automation. experimentalfeature</span><span class="sxs-lookup"><span data-stu-id="641ad-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="641ad-173">float</span><span class="sxs-lookup"><span data-stu-id="641ad-173">float</span></span>                        | <span data-ttu-id="641ad-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="641ad-174">System.Single</span></span>                                                       |
|<span data-ttu-id="641ad-175">guid</span><span class="sxs-lookup"><span data-stu-id="641ad-175">guid</span></span>                         | <span data-ttu-id="641ad-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="641ad-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="641ad-177">Hash Tabelle</span><span class="sxs-lookup"><span data-stu-id="641ad-177">hashtable</span></span>                    | <span data-ttu-id="641ad-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="641ad-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="641ad-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="641ad-179">initialsessionstate</span></span>          | <span data-ttu-id="641ad-180">System.Management.Automation.Runspaces.Initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="641ad-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="641ad-181">INT</span><span class="sxs-lookup"><span data-stu-id="641ad-181">int</span></span>                          | <span data-ttu-id="641ad-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="641ad-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="641ad-183">int16</span><span class="sxs-lookup"><span data-stu-id="641ad-183">int16</span></span>                        | <span data-ttu-id="641ad-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="641ad-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="641ad-185">int32</span><span class="sxs-lookup"><span data-stu-id="641ad-185">int32</span></span>                        | <span data-ttu-id="641ad-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="641ad-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="641ad-187">int64</span><span class="sxs-lookup"><span data-stu-id="641ad-187">int64</span></span>                        | <span data-ttu-id="641ad-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="641ad-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="641ad-189">IPAddress</span><span class="sxs-lookup"><span data-stu-id="641ad-189">ipaddress</span></span>                    | <span data-ttu-id="641ad-190">System .net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="641ad-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="641ad-191">IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="641ad-191">IPEndpoint</span></span>                   | <span data-ttu-id="641ad-192">System .net. ipdpoint</span><span class="sxs-lookup"><span data-stu-id="641ad-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="641ad-193">long</span><span class="sxs-lookup"><span data-stu-id="641ad-193">long</span></span>                         | <span data-ttu-id="641ad-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="641ad-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="641ad-195">MailAddress</span><span class="sxs-lookup"><span data-stu-id="641ad-195">mailaddress</span></span>                  | <span data-ttu-id="641ad-196">System .net. Mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="641ad-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="641ad-197">NULL-Zeichenfolge</span><span class="sxs-lookup"><span data-stu-id="641ad-197">NullString</span></span>                   | <span data-ttu-id="641ad-198">System. Management. Automation. Language. NullString</span><span class="sxs-lookup"><span data-stu-id="641ad-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="641ad-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="641ad-199">ObjectSecurity</span></span>               | <span data-ttu-id="641ad-200">System. Security. AccessControl. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="641ad-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="641ad-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="641ad-201">OutputType</span></span>                   | <span data-ttu-id="641ad-202">System. Management. Automation. outputtypeer Attribute</span><span class="sxs-lookup"><span data-stu-id="641ad-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="641ad-203">Parameter</span><span class="sxs-lookup"><span data-stu-id="641ad-203">Parameter</span></span>                    | <span data-ttu-id="641ad-204">System. Management. Automation. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="641ad-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="641ad-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="641ad-205">PhysicalAddress</span></span>              | <span data-ttu-id="641ad-206">System .net. Network Information. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="641ad-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="641ad-207">powershell</span><span class="sxs-lookup"><span data-stu-id="641ad-207">powershell</span></span>                   | <span data-ttu-id="641ad-208">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="641ad-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="641ad-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-209">psaliasproperty</span></span>              | <span data-ttu-id="641ad-210">System. Management. Automation. psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="641ad-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="641ad-211">pscredential</span></span>                 | <span data-ttu-id="641ad-212">System. Management. Automation. PSCredential</span><span class="sxs-lookup"><span data-stu-id="641ad-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="641ad-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="641ad-213">pscustomobject</span></span>               | <span data-ttu-id="641ad-214">System. Management. Automation. psobject</span><span class="sxs-lookup"><span data-stu-id="641ad-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="641ad-215">Psdefaultvalue</span><span class="sxs-lookup"><span data-stu-id="641ad-215">PSDefaultValue</span></span>               | <span data-ttu-id="641ad-216">System.Management.Automation.PSDefaultvalueattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="641ad-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="641ad-217">pslistmodifier</span></span>               | <span data-ttu-id="641ad-218">System. Management. Automation. pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="641ad-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="641ad-219">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="641ad-219">psmoduleinfo</span></span>                 | <span data-ttu-id="641ad-220">System. Management. Automation. psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="641ad-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="641ad-221">psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-221">psnoteproperty</span></span>               | <span data-ttu-id="641ad-222">System. Management. Automation. psnoteproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="641ad-223">psobject</span><span class="sxs-lookup"><span data-stu-id="641ad-223">psobject</span></span>                     | <span data-ttu-id="641ad-224">System. Management. Automation. psobject</span><span class="sxs-lookup"><span data-stu-id="641ad-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="641ad-225">psprientschärvedictionary</span><span class="sxs-lookup"><span data-stu-id="641ad-225">psprimitivedictionary</span></span>        | <span data-ttu-id="641ad-226">System. Management. Automation. psprientschärvedictionary</span><span class="sxs-lookup"><span data-stu-id="641ad-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="641ad-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="641ad-227">pspropertyexpression</span></span>         | <span data-ttu-id="641ad-228">Microsoft. PowerShell. Commands. pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="641ad-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="641ad-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="641ad-229">psscriptmethod</span></span>               | <span data-ttu-id="641ad-230">System. Management. Automation. psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="641ad-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="641ad-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-231">psscriptproperty</span></span>             | <span data-ttu-id="641ad-232">System. Management. Automation. psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="641ad-233">Pstypameattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="641ad-234">System. Management. Automation. pstypameattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="641ad-235">psvariable</span><span class="sxs-lookup"><span data-stu-id="641ad-235">psvariable</span></span>                   | <span data-ttu-id="641ad-236">System. Management. Automation. psvariable</span><span class="sxs-lookup"><span data-stu-id="641ad-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="641ad-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-237">psvariableproperty</span></span>           | <span data-ttu-id="641ad-238">System. Management. Automation. psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="641ad-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="641ad-239">ref</span><span class="sxs-lookup"><span data-stu-id="641ad-239">ref</span></span>                          | <span data-ttu-id="641ad-240">System. Management. Automation. psreference</span><span class="sxs-lookup"><span data-stu-id="641ad-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="641ad-241">regex</span><span class="sxs-lookup"><span data-stu-id="641ad-241">regex</span></span>                        | <span data-ttu-id="641ad-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="641ad-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="641ad-243">Runspace</span><span class="sxs-lookup"><span data-stu-id="641ad-243">runspace</span></span>                     | <span data-ttu-id="641ad-244">System. Management. Automation. Runspaces. Runspace</span><span class="sxs-lookup"><span data-stu-id="641ad-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="641ad-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="641ad-245">runspacefactory</span></span>              | <span data-ttu-id="641ad-246">System. Management. Automation. Runspaces. runspacefactory</span><span class="sxs-lookup"><span data-stu-id="641ad-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="641ad-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="641ad-247">sbyte</span></span>                        | <span data-ttu-id="641ad-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="641ad-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="641ad-249">scriptblock</span><span class="sxs-lookup"><span data-stu-id="641ad-249">scriptblock</span></span>                  | <span data-ttu-id="641ad-250">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="641ad-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="641ad-251">securestring</span><span class="sxs-lookup"><span data-stu-id="641ad-251">securestring</span></span>                 | <span data-ttu-id="641ad-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="641ad-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="641ad-253">semver</span><span class="sxs-lookup"><span data-stu-id="641ad-253">semver</span></span>                       | <span data-ttu-id="641ad-254">System. Management. Automation. semanticversion</span><span class="sxs-lookup"><span data-stu-id="641ad-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="641ad-255">short</span><span class="sxs-lookup"><span data-stu-id="641ad-255">short</span></span>                        | <span data-ttu-id="641ad-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="641ad-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="641ad-257">single</span><span class="sxs-lookup"><span data-stu-id="641ad-257">single</span></span>                       | <span data-ttu-id="641ad-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="641ad-258">System.Single</span></span>                                                       |
|<span data-ttu-id="641ad-259">string</span><span class="sxs-lookup"><span data-stu-id="641ad-259">string</span></span>                       | <span data-ttu-id="641ad-260">System.String</span><span class="sxs-lookup"><span data-stu-id="641ad-260">System.String</span></span>                                                       |
|<span data-ttu-id="641ad-261">Supportswildcards</span><span class="sxs-lookup"><span data-stu-id="641ad-261">SupportsWildcards</span></span>            | <span data-ttu-id="641ad-262">System. Management. Automation. supportswildcardsattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="641ad-263">switch</span><span class="sxs-lookup"><span data-stu-id="641ad-263">switch</span></span>                       | <span data-ttu-id="641ad-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="641ad-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="641ad-265">Zeitraum</span><span class="sxs-lookup"><span data-stu-id="641ad-265">timespan</span></span>                     | <span data-ttu-id="641ad-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="641ad-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="641ad-267">type</span><span class="sxs-lookup"><span data-stu-id="641ad-267">type</span></span>                         | <span data-ttu-id="641ad-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="641ad-268">System.Type</span></span>                                                         |
|<span data-ttu-id="641ad-269">uint</span><span class="sxs-lookup"><span data-stu-id="641ad-269">uint</span></span>                         | <span data-ttu-id="641ad-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="641ad-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="641ad-271">uint16</span><span class="sxs-lookup"><span data-stu-id="641ad-271">uint16</span></span>                       | <span data-ttu-id="641ad-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="641ad-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="641ad-273">uint32</span><span class="sxs-lookup"><span data-stu-id="641ad-273">uint32</span></span>                       | <span data-ttu-id="641ad-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="641ad-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="641ad-275">uint64</span><span class="sxs-lookup"><span data-stu-id="641ad-275">uint64</span></span>                       | <span data-ttu-id="641ad-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="641ad-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="641ad-277">ulong</span><span class="sxs-lookup"><span data-stu-id="641ad-277">ulong</span></span>                        | <span data-ttu-id="641ad-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="641ad-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="641ad-279">uri</span><span class="sxs-lookup"><span data-stu-id="641ad-279">uri</span></span>                          | <span data-ttu-id="641ad-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="641ad-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="641ad-281">ushort</span><span class="sxs-lookup"><span data-stu-id="641ad-281">ushort</span></span>                       | <span data-ttu-id="641ad-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="641ad-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="641ad-283">Validatecount</span><span class="sxs-lookup"><span data-stu-id="641ad-283">ValidateCount</span></span>                | <span data-ttu-id="641ad-284">System. Management. Automation. validatezähltattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="641ad-285">Validatedrive</span><span class="sxs-lookup"><span data-stu-id="641ad-285">ValidateDrive</span></span>                | <span data-ttu-id="641ad-286">System. Management. Automation. validatedriveattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="641ad-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="641ad-287">ValidateLength</span></span>               | <span data-ttu-id="641ad-288">System. Management. Automation. validatelengthattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="641ad-289">Validatenotnull</span><span class="sxs-lookup"><span data-stu-id="641ad-289">ValidateNotNull</span></span>              | <span data-ttu-id="641ad-290">System. Management. Automation. validatenotnullattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="641ad-291">Validatenotnullorempty</span><span class="sxs-lookup"><span data-stu-id="641ad-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="641ad-292">System. Management. Automation. validatenotnulloremptyattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="641ad-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="641ad-293">ValidatePattern</span></span>              | <span data-ttu-id="641ad-294">System. Management. Automation. validatepatternattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="641ad-295">Validaterange</span><span class="sxs-lookup"><span data-stu-id="641ad-295">ValidateRange</span></span>                | <span data-ttu-id="641ad-296">System. Management. Automation. validaterangeattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="641ad-297">Validatescript</span><span class="sxs-lookup"><span data-stu-id="641ad-297">ValidateScript</span></span>               | <span data-ttu-id="641ad-298">System. Management. Automation. validatescriptattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="641ad-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="641ad-299">ValidateSet</span></span>                  | <span data-ttu-id="641ad-300">System. Management. Automation. validatesetattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="641ad-301">Validatetrusteddata</span><span class="sxs-lookup"><span data-stu-id="641ad-301">ValidateTrustedData</span></span>          | <span data-ttu-id="641ad-302">System. Management. Automation. validatetrusteddataattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="641ad-303">Validateuserdrive</span><span class="sxs-lookup"><span data-stu-id="641ad-303">ValidateUserDrive</span></span>            | <span data-ttu-id="641ad-304">System. Management. Automation. validateuserdriveattribute</span><span class="sxs-lookup"><span data-stu-id="641ad-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="641ad-305">version</span><span class="sxs-lookup"><span data-stu-id="641ad-305">version</span></span>                      | <span data-ttu-id="641ad-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="641ad-306">System.Version</span></span>                                                      |
|<span data-ttu-id="641ad-307">void</span><span class="sxs-lookup"><span data-stu-id="641ad-307">void</span></span>                         | <span data-ttu-id="641ad-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="641ad-308">System.Void</span></span>                                                         |
|<span data-ttu-id="641ad-309">Wildcardpattern</span><span class="sxs-lookup"><span data-stu-id="641ad-309">WildcardPattern</span></span>              | <span data-ttu-id="641ad-310">System. Management. Automation. wildcardpattern</span><span class="sxs-lookup"><span data-stu-id="641ad-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="641ad-311">WMI</span><span class="sxs-lookup"><span data-stu-id="641ad-311">wmi</span></span>                          | <span data-ttu-id="641ad-312">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="641ad-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="641ad-313">WMIClass</span><span class="sxs-lookup"><span data-stu-id="641ad-313">wmiclass</span></span>                     | <span data-ttu-id="641ad-314">System. Management. ManagementClass</span><span class="sxs-lookup"><span data-stu-id="641ad-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="641ad-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="641ad-315">wmisearcher</span></span>                  | <span data-ttu-id="641ad-316">System. Management. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="641ad-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="641ad-317">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="641ad-317">X500DistinguishedName</span></span>        | <span data-ttu-id="641ad-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="641ad-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="641ad-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="641ad-319">X509Certificate</span></span>              | <span data-ttu-id="641ad-320">System.Security.Cryptography.X509Certificates.X509Certificate</span><span class="sxs-lookup"><span data-stu-id="641ad-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="641ad-321">Xml</span><span class="sxs-lookup"><span data-stu-id="641ad-321">xml</span></span>                          | <span data-ttu-id="641ad-322">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="641ad-322">System.Xml.XmlDocument</span></span>                                              |
